# sistemasembarcados

./: Aula2.c  fatorandoc.c  imposto.c
animacao/: CMakeLists.txt  animacao.c  buzzer.c  buzzer.h  neopixel.c  neopixel.h  ws2812.h
leds_matriz/: CMakeLists.txt  count.h  leds_matriz.c
monitoramento_ambiente/: CMakeCache.txt  CMakeLists.txt  monitoramento_ambiente.c  ssd1306.c  ssd1306.h
sso/: CMakeLists.txt  sso.c
tarefa2/: CMakeCache.txt  CMakeLists.txt  tarefa2.c
